[package]
name = "discipline"
version = "0.1.0"
authors = ["Flowmaster <ellyssin.gimhae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.7"
juniper = "0.12.0"
juniper_hyper = "0.3.0"
pretty_env_logger = "0.2"
futures = "0.1"
tokio = "0.1.8"
hyper = "0.12"
tokio-threadpool = "0.1.7"

[dev-dependencies]
pretty_env_logger = "0.2"
reqwest = "0.9"
