[package]
name = "discipline"
version = "0.1.0"
authors = ["Flowmaster <ellyssin.gimhae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.6"
diesel = { version = "1.4.2", features = ["postgres", "uuid", "chrono"] }
dotenv = "0.9.0"
futures = "0.1"
hyper = "0.12"
juniper = "0.12.0"
juniper_hyper = "0.3.0"
pretty_env_logger = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = "0.1.8"
tokio-threadpool = "0.1.7"
url = "1.7"
uuid = { version = "0.6", features = ["serde", "v4"] }

