[package]
name = "discipline"
version = "0.1.0"
authors = ["Flowmaster <ellyssin.gimhae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
bcrypt = "0.4"
chrono = "0.4.6"
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
dotenv = "0.9.0"
futures = "0.1"
hyper = "0.12"
jsonwebtoken = "6.0.1"
juniper = "0.12" 
juniper_hyper = "0.3.0"
pretty_env_logger = "0.2"
r2d2 = "0.8.5"
rand = "0.7.0"
rust-crypto = "^0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = "0.1.8"
tokio-threadpool = "0.1.7"
url = "1.7"
uuid = { version = "0.7", features = ["serde", "v4"] }

